--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,14 +1,22 @@
 /* Provide sufficient contrast against white background */
-a {
+/*a {
   color: #0366d6;
 }
 
 code {
   color: #E01A76;
-}
+}*/
 
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+/*html {
+    background: url('images/Background.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}*/
